left align fix

--- a/css/style.css
+++ b/css/style.css
@@ -177,8 +177,18 @@ a:hover {
   background-color: var(--secondary);
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   flex: 1 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
+.rank-row {
+  display: flex;
+  justify-content: space-between;
+}
+.left {
+  text-align: left;
+}
 .hobbies {
   grid-area: hobbies;
 }
